--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ chardet==3.0.4
 Click==7.0
 cloudpickle==1.2.2
 colorama==0.4.3
-Django==2.2.10
+Django==3.0.3
 fbchat-archive-parser==2.0.0.post2
 future==0.18.2
 gym==0.15.6
@@ -23,7 +23,7 @@ Pillow==7.0.0
 protobuf==3.1.0
 pyglet==1.4.10
 python-dateutil==2.8.1
-pytube==9.5.3
+pytube3==9.6.1
 pytz==2019.3
 PyYAML==5.3
 requests==2.22.0
@@ -31,4 +31,5 @@ scipy==1.4.1
 six==1.14.0
 soupsieve==1.9.5
 sqlparse==0.3.0
+typing-extensions==3.7.4.1
 urllib3==1.25.8
