--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17
 arrow==0.15.5
 asgiref==3.2.3
 Babel==2.8.0
@@ -19,17 +20,24 @@ Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 nose==1.3.7
 numpy==1.18.1
+pefile==2019.4.18
 Pillow==7.0.0
+progress==1.5
+progressbar2==3.47.0
 protobuf==3.1.0
 pyglet==1.4.10
+PyInstaller==3.6
 python-dateutil==2.8.1
+python-utils==2.3.0
 pytube3==9.6.1
 pytz==2019.3
+pywin32-ctypes==0.2.0
 PyYAML==5.3
 requests==2.22.0
 scipy==1.4.1
 six==1.14.0
 soupsieve==1.9.5
 sqlparse==0.3.0
+tqdm==4.43.0
 typing-extensions==3.7.4.1
 urllib3==1.25.8
